plugins{
    id 'nva.identity.service.rootplugin'
}

//workaround for jacoco-merge to work
allprojects{
    apply plugin: 'nva.identity.service.java-common-conventions'
    apply plugin: 'nva.identity.service.dynamodblocal'
}

tasks.withType(JavaCompile) {
    options.release = 17
}
wrapper {
    gradleVersion = '8.2.1'
    distributionType = Wrapper.DistributionType.ALL
}